# fastvistos

./: .env.example  .env.template  .gitignore  .prettierignore  .prettierrc  AI-Response-Example.md  BACKLOG.md  BaseLayout.astro  CLAUDE.md  Dockerfile  HIDDEN-REF-test.md  README-Documentation-System.md  README-How-to-generate-doc.md  README-Incident Management Tagging.md  README-MultiSite.md  README-My-SEO-Steps.md  README-Revolutionary-SEO-System.md  README-api-docker-solutions.md  README-backlog.md  README-cotacao-seguro.md  README-disabled-links.md  README-how-to-create-an-article.md  README-how-to-create-massive-article-automation copy.md  README-how-to-create-massive-article-automation.md  README-how-to-create-massive-article-automation.temp.md  README-ld+json-validators.md  README-multi-site-0-trash.md  README-multi-site-trash.md  README-multi-site.md  README-sites-templates  README-starting-a-new-site.md  README.md  REAME-how-to-increase-organic-traffic-fastvistos.md  REVOLUTIONARY-SYSTEM-COMPLETE.md  [...slug].astro  astro.config.mjs  create-site-new.js  create-site.js  debug-content-parser.mjs  debug-p2digital.mjs  (+56 more)
lixo/: index1  (+8 more)
vitrine/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  rebuild.sh  run.sh
vitrine/core/: adapters.py  admin.py  admin_domain.py  deploy.py  forms.py  models.py  nginx_templates.py  provisioning.py  seo.py  signals.py  views.py
vitrine/docs/: * DEPOIS-DE-MUITO-TEMPO - COISAS PARA LEMBRAR - ME ESQUECI.md  00-COMO-DOCUMENTAR.md  TESTE-FORMATOS-PRATICA.md  build-por-projeto.md  guia-projetos-paginas-build-deploy-context.md  (+6 more)
(+1066 files in other folders)
