[project]
name = "vitrine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.1.7",
    "django-extensions>=4.1",
    "django-model-utils>=5.0.0",
    "django-unfold>=0.91.0",
    "python-dotenv==1.0.1",
    "werkzeug>=3.1.8",
]
